# flappy_rl

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: concepts.md  curves.js  decisions.md  index.html  player.js  prd.md  rfc.md  sample_episode.json  test.md  working.md
docs/results/: v1_sparse_ep0.json  v1_sparse_gen.json  v1_sparse_metrics.json  v2_shaped_ep0.json  v2_shaped_gen.json  v2_shaped_metrics.json
scripts/: evaluate.py  play.py  record_episode.py  render_gif.py  train.py
src/flappy_rl/: __init__.py  env.py  game.py  metrics.py  record_policy.py  recorder.py
tests/: test_env.py  test_game.py  test_recorder.py  test_scaffold.py  test_training_smoke.py
