[project]
name = "flappy_rl"
version = "0.1.0"
description = "Learning RL by teaching a computer to play a self-authored Flappy Bird."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.2",
    "numpy>=1.26",
    "pygame>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
# 网页播放器的视觉/链路验证（截图）。本地用，CI 不装，避免下载 chromium。
viz = [
    "playwright>=1.40",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
