[project]
name = "flappy_rl"
version = "0.1.0"
description = "Learning RL by teaching a computer to play a self-authored Flappy Bird."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.2",
    "numpy>=1.26",
    "pygame>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
# 本地生成资产用：网页视觉验证（playwright 截图）+ GIF 渲染（pillow）。
# CI 不装，避免下载 chromium。
viz = [
    "playwright>=1.40",
    "pillow>=10.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
